[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Images/bar_blue.png" type="Texture" id=3]
[ext_resource path="res://Images/bar_red.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 327.623, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 150.815 )

[node name="Game" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Bar1" parent="." index="0" instance=ExtResource( 2 )]

spriteImage = ExtResource( 3 )
isAI = false

[node name="Bar2" parent="." index="1" instance=ExtResource( 2 )]

spriteImage = ExtResource( 4 )
isAI = true

[node name="StartPosition1" type="Position2D" parent="." index="2"]

_sections_unfolded = [ "Transform" ]

[node name="StartPosition2" type="Position2D" parent="." index="3"]

_sections_unfolded = [ "Transform" ]

[node name="Ball" parent="." index="4" instance=ExtResource( 5 )]

[node name="UpperLimit" type="Area2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 320, -10 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpperLimit" index="0"]

shape = SubResource( 1 )

[node name="LowerLimit" type="Area2D" parent="." index="6"]

editor/display_folded = true
position = Vector2( 320, 310 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerLimit" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="LeftLimit" type="Area2D" parent="." index="7"]

editor/display_folded = true
position = Vector2( -10, 150 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftLimit" index="0"]

shape = SubResource( 2 )

[node name="RightLimit" type="Area2D" parent="." index="8"]

editor/display_folded = true
position = Vector2( 650, 150 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightLimit" index="0"]

shape = SubResource( 2 )

[connection signal="fromBar" from="Bar1" to="Ball" method="_on_Bar1"]

[connection signal="fromBar" from="Bar2" to="Ball" method="_on_Bar2"]

[connection signal="area_entered" from="UpperLimit" to="Ball" method="_on_UpperLimit_area_entered"]

[connection signal="area_entered" from="LowerLimit" to="Ball" method="_on_LowerLimit_area_entered"]

[connection signal="area_entered" from="LeftLimit" to="." method="_on_LeftLimit_area_entered"]

[connection signal="area_entered" from="RightLimit" to="." method="_on_RightLimit_area_entered"]


